# noogh-AI

./: .dockerignore  .env.example  .gitignore  AUTOMATION_INTEGRATION_COMPLETE.md  CHATGPT_ACTIONS_GUIDE.md  CLEANUP_REPORT.md  COMMIT_MSG.txt  COMPLETE_SETUP_DONE.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  DASHBOARD_AUDIT_REPORT.md  DASHBOARD_COMPLETE.md  DASHBOARD_CONNECTIVITY_SUMMARY_AR.md  DASHBOARD_SYSTEM_MIRROR_REPORT.md  DASHBOARD_TELEMETRY_FIX.py  DEVOPS_AUTOMATION_REPORT.md  DEVOPS_MLOPS_ACTIVATION_REPORT.md  Dockerfile  FINAL_100_PERCENT_REPORT.md  FINAL_STATUS.md  INSTALLATION.md  INSTALL_VISION.md  Makefile  OPERATIONS_QUICK_START.md  PHASE10_COMPLETE.md  PHASE11_COMPLETE.md  PHASE14_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_PLAN.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PRODUCTION_DEPLOYMENT_REPORT.md  PRODUCTION_ORCHESTRATOR_REPORT.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_AUDIT_REPORT.md  (+24 more)
.claude/: settings.local.json
.continue/agents/: new-config-1.yaml  new-config-3.yaml  new-config-4.yaml
.github/workflows/: ci-cd.yml
archive/react_dashboard_backup_20251121_111600/: package-lock.json
backups/backup_20251117_174433/: simple_index.json
config/: minister_state.json  modules_config.json
data/: paper_ledger.json  simple_index.json
data/archive/: brain_v4_memories.jsonl
data/training/: daily_report_20251119.json  daily_report_20251121.json
deploy/grafana/: dashboard.json
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/systemd/: noogh-api.service  noogh-watchdog.service
grafana/: DELIVERY_SUMMARY.md  GRAFANA_SETUP_GUIDE.md  fix_datasource.md  noogh_unified_system_dashboard.json  test_all_endpoints.sh  test_endpoints.sh
migrations/: env.py
migrations/versions/: b8a169f37b24_create_users_table.py  e1ad2362760c_add_conversations_table.py
models/versions/: versions_metadata.json
scripts/: expand_knowledge.py  fix_broken_packages.py  fix_imports.py  hard_reset.py  healthcheck.py  launch_dashboard.sh  manage_tunnel.sh  mcp_server.py  migrate_data.py  run_autonomous_hunter.py  run_dev.sh  setup_cron.sh  setup_env.sh  setup_local_model.py  start_hybrid_simulation.py  start_sovereign_system.sh  test_autonomous_system.py  test_cabinet.py  test_dashboard_integration.py  test_full_cabinet.py  test_government_api.py  test_high_end_brain.py  test_system_dominance.py  test_user_api.py  test_vision.py  test_voice.py  train_daily.py  update_ministers.py  verify_conversations.py  verify_fixes.py  verify_live_status.py  watchdog.sh
src/: config.py  external_awareness.py  knowledge_indexer.py  knowledge_kernel_v4_1.py  plugin_gpu_core_extended.py  reflection.py  start_noogh_os.sh
src/agent/: __init__.py  api.py  brain.py  project_analyzer.py  tools.py  unified_ai_manager.py
src/api/: app.py  auth.py  main.py  metrics.py  models.py
src/audit/: audit_scheduler.py  automated_tests.py  automated_tests_extended.py  deep_cognition_engine.py  deep_cognition_questions.py  question_bank_extended.py  question_bank_final.py  self_audit_engine.py  subsystem_intelligence_tests.py
src/automation/: __init__.py  autonomous_audit_scheduler.py
src/autonomy/: __init__.py  action_executor.py  approval_queue.py  autonomous_brain_agent.py  autonomous_runner.py  awareness_mapper.py  brain_adjuster.py  cognitive_advisor.py  decision_loop.py  feedback_collector.py  goal_tracker.py  health_baseline.py  improvement_logger.py  model_manager.py  monitor_service.py  self_monitor.py  system_monitor.py  training_scheduler.py
src/brain/: core.py  enhanced_brain.py  notifier.py  unified_brain.py
src/clients/: __init__.py  autonomous_client.py
src/config/: __init__.py  settings.py
src/core/: base.py  config.py  database.py  di.py  init_db.py  models.py  repository.py  service_registry.py  settings.py
src/dashboard/: index.html  package.json  tailwind.config.js
src/data_collection/: __init__.py  auto_data_collector.py
src/finance/: __init__.py  finance_system.py
src/government/: __init__.py  analysis_minister.py  base_minister.py  communication_minister.py  creativity_minister.py  development_minister.py  education_minister.py  finance_minister.py  (+12 more)
tests/: __init__.py  conftest.py  smoke_test.py  test_communication_minister.py  test_dashboard_v2.py  test_di_services.py  test_education_minister.py  test_finance_minister_security.py  test_finance_safety.py  test_government.py  test_integration_finance.py  test_security_minister.py  test_v1_1_systems.py
training/: __init__.py  data_loader.py
(+182 files in other folders)
